deploy/service.yaml


apiVersion: v1
kind: Service
metadata:
  name: app-web-service
spec:
  selector:
    app: app-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
