deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-web-ingress
spec:
  rules:
    - host: tu_dominio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-web-service
                port:
                  number: 80
